@@ -43,100 +43,104 @@ DataType uint8
 EC_OP_NOOP                          0x01
 
 EC_OP_AUTH_REQ                      0x02
-EC_OP_AUTH_FAIL                     0x03
-EC_OP_AUTH_OK                       0x04
+EC_OP_AUTH_SALT                     0x03
+EC_OP_AUTH_PASSWD                   0x04
+EC_OP_AUTH_FAIL                     0x05
+EC_OP_AUTH_OK                       0x06
 
-EC_OP_FAILED                        0x05
-EC_OP_STRINGS                       0x06
-EC_OP_MISC_DATA                     0x07
-EC_OP_SHUTDOWN                      0x08
-EC_OP_ADD_LINK                      0x09
-EC_OP_STAT_REQ                      0x0A
-EC_OP_GET_CONNSTATE                 0x0B
-EC_OP_STATS                         0x0C
 
-EC_OP_GET_DLOAD_QUEUE               0x0D
-EC_OP_GET_ULOAD_QUEUE               0x0E
-EC_OP_GET_WAIT_QUEUE                0x0F
+EC_OP_FAILED                        0x07
+EC_OP_STRINGS                       0x08
+EC_OP_MISC_DATA                     0x09
+EC_OP_SHUTDOWN                      0x0A
+EC_OP_ADD_LINK                      0x0B
+EC_OP_STAT_REQ                      0x0C
+EC_OP_GET_CONNSTATE                 0x0D
+EC_OP_STATS                         0x0E
 
-EC_OP_GET_SHARED_FILES              0x10
-EC_OP_SHARED_SET_PRIO               0x11
+EC_OP_GET_DLOAD_QUEUE               0x0F
+EC_OP_GET_ULOAD_QUEUE               0x10
+EC_OP_GET_WAIT_QUEUE                0x11
 
-EC_OP_PARTFILE_REMOVE_NO_NEEDED     0x12
-EC_OP_PARTFILE_REMOVE_FULL_QUEUE    0x13
-EC_OP_PARTFILE_REMOVE_HIGH_QUEUE    0x14
-EC_OP_PARTFILE_CLEANUP_SOURCES      0x15
-EC_OP_PARTFILE_SWAP_A4AF_THIS       0x16
-EC_OP_PARTFILE_SWAP_A4AF_THIS_AUTO  0x17
-EC_OP_PARTFILE_SWAP_A4AF_OTHERS     0x18
-EC_OP_PARTFILE_PAUSE                0x19
-EC_OP_PARTFILE_RESUME               0x1A
-EC_OP_PARTFILE_STOP                 0x1B
-EC_OP_PARTFILE_PRIO_SET             0x1C
-EC_OP_PARTFILE_DELETE               0x1D
-EC_OP_PARTFILE_SET_CAT              0x1E
+EC_OP_GET_SHARED_FILES              0x12
+EC_OP_SHARED_SET_PRIO               0x13
 
-EC_OP_DLOAD_QUEUE                   0x1F
-EC_OP_ULOAD_QUEUE                   0x20
-EC_OP_WAIT_QUEUE                    0x21
+EC_OP_PARTFILE_REMOVE_NO_NEEDED     0x14
+EC_OP_PARTFILE_REMOVE_FULL_QUEUE    0x15
+EC_OP_PARTFILE_REMOVE_HIGH_QUEUE    0x16
+EC_OP_PARTFILE_CLEANUP_SOURCES      0x17
+EC_OP_PARTFILE_SWAP_A4AF_THIS       0x18
+EC_OP_PARTFILE_SWAP_A4AF_THIS_AUTO  0x19
+EC_OP_PARTFILE_SWAP_A4AF_OTHERS     0x1A
+EC_OP_PARTFILE_PAUSE                0x1B
+EC_OP_PARTFILE_RESUME               0x1C
+EC_OP_PARTFILE_STOP                 0x1D
+EC_OP_PARTFILE_PRIO_SET             0x1E
+EC_OP_PARTFILE_DELETE               0x1F
+EC_OP_PARTFILE_SET_CAT              0x20
 
-EC_OP_SHARED_FILES                  0x22
-EC_OP_SHAREDFILES_RELOAD            0x23
-EC_OP_SHAREDFILES_ADD_DIRECTORY     0x24
+EC_OP_DLOAD_QUEUE                   0x21
+EC_OP_ULOAD_QUEUE                   0x22
+EC_OP_WAIT_QUEUE                    0x23
 
-EC_OP_RENAME_FILE                   0x25
+EC_OP_SHARED_FILES                  0x24
+EC_OP_SHAREDFILES_RELOAD            0x25
+EC_OP_SHAREDFILES_ADD_DIRECTORY     0x26
 
-EC_OP_SEARCH_START                  0x26
-EC_OP_SEARCH_STOP                   0x27
-EC_OP_SEARCH_RESULTS                0x28
-EC_OP_SEARCH_PROGRESS               0x29
+EC_OP_RENAME_FILE                   0x27
 
-EC_OP_DOWNLOAD_SEARCH_RESULT        0x2A
+EC_OP_SEARCH_START                  0x28
+EC_OP_SEARCH_STOP                   0x29
+EC_OP_SEARCH_RESULTS                0x2A
+EC_OP_SEARCH_PROGRESS               0x2B
 
-EC_OP_IPFILTER_RELOAD               0x2B
+EC_OP_DOWNLOAD_SEARCH_RESULT        0x2C
 
-EC_OP_GET_SERVER_LIST               0x2C
-EC_OP_SERVER_LIST                   0x2D
-EC_OP_SERVER_DISCONNECT             0x2E
-EC_OP_SERVER_CONNECT                0x2F
-EC_OP_SERVER_REMOVE                 0x30
-EC_OP_SERVER_ADD                    0x31
-EC_OP_SERVER_UPDATE_FROM_URL        0x32
+EC_OP_IPFILTER_RELOAD               0x2D
 
-EC_OP_ADDLOGLINE                    0x33
-EC_OP_ADDDEBUGLOGLINE               0x34
-EC_OP_GET_LOG                       0x35
-EC_OP_GET_DEBUGLOG                  0x36
-EC_OP_GET_SERVERINFO                0x37
-EC_OP_LOG                           0x38
-EC_OP_DEBUGLOG                      0x39
-EC_OP_SERVERINFO                    0x3A
-EC_OP_RESET_LOG                     0x3B
-EC_OP_RESET_DEBUGLOG                0x3C
-EC_OP_CLEAR_SERVERINFO              0x3D
-EC_OP_GET_LAST_LOG_ENTRY            0x3E
+EC_OP_GET_SERVER_LIST               0x2E
+EC_OP_SERVER_LIST                   0x2F
+EC_OP_SERVER_DISCONNECT             0x30
+EC_OP_SERVER_CONNECT                0x31
+EC_OP_SERVER_REMOVE                 0x32
+EC_OP_SERVER_ADD                    0x33
+EC_OP_SERVER_UPDATE_FROM_URL        0x34
 
-EC_OP_GET_PREFERENCES               0x3F
-EC_OP_SET_PREFERENCES               0x40
+EC_OP_ADDLOGLINE                    0x35
+EC_OP_ADDDEBUGLOGLINE               0x36
+EC_OP_GET_LOG                       0x37
+EC_OP_GET_DEBUGLOG                  0x38
+EC_OP_GET_SERVERINFO                0x39
+EC_OP_LOG                           0x3A
+EC_OP_DEBUGLOG                      0x3B
+EC_OP_SERVERINFO                    0x3C
+EC_OP_RESET_LOG                     0x3D
+EC_OP_RESET_DEBUGLOG                0x3E
+EC_OP_CLEAR_SERVERINFO              0x3F
+EC_OP_GET_LAST_LOG_ENTRY            0x40
 
-EC_OP_CREATE_CATEGORY               0x41
-EC_OP_UPDATE_CATEGORY               0x42
-EC_OP_DELETE_CATEGORY               0x43
+EC_OP_GET_PREFERENCES               0x41
+EC_OP_SET_PREFERENCES               0x42
 
-EC_OP_GET_STATSGRAPHS               0x44
-EC_OP_STATSGRAPHS                   0x45
-EC_OP_GET_STATSTREE                 0x46
-EC_OP_STATSTREE                     0x47
+EC_OP_CREATE_CATEGORY               0x43
+EC_OP_UPDATE_CATEGORY               0x44
+EC_OP_DELETE_CATEGORY               0x45
 
-EC_OP_KAD_START                     0x48
-EC_OP_KAD_STOP                      0x49
+EC_OP_GET_STATSGRAPHS               0x46
+EC_OP_STATSGRAPHS                   0x47
+EC_OP_GET_STATSTREE                 0x48
+EC_OP_STATSTREE                     0x49
 
-EC_OP_CONNECT                       0x4A
-EC_OP_DISCONNECT                    0x4B
-EC_OP_GET_DLOAD_QUEUE_DETAIL        0x4C
+EC_OP_KAD_START                     0x4A
+EC_OP_KAD_STOP                      0x4B
 
-EC_OP_KAD_UPDATE_FROM_URL           0x4D
-EC_OP_KAD_BOOTSTRAP_FROM_IP         0x4E
+EC_OP_CONNECT                       0x4C
+EC_OP_DISCONNECT                    0x4D
+EC_OP_GET_DLOAD_QUEUE_DETAIL        0x4E
+
+EC_OP_KAD_UPDATE_FROM_URL           0x4F
+EC_OP_KAD_BOOTSTRAP_FROM_IP         0x50
+
 [/Section]
 
 [Section Content]
@@ -155,6 +159,7 @@ EC_TAG_LOG_TO_STATUS                      0x0007
 EC_TAG_BOOTSTRAP_IP                       0x0008
 EC_TAG_BOOTSTRAP_PORT                     0x0009
 EC_TAG_CLIENT_ID                          0x000A
+EC_TAG_PASSWD_SALT                        0x000B
 
 
 EC_TAG_CLIENT_NAME                        0x0100
