@@ -38,8 +38,12 @@ class CECPacketHandlerBase {
 
 class CECLoginPacket : public CECPacket {
 	public:
-		CECLoginPacket(const wxString &pass,
-						const wxString& client, const wxString& version);
+		CECLoginPacket(const wxString& client, const wxString& version);
+};
+
+class CECAuthPacket : public CECPacket {
+	public:
+		CECAuthPacket(const wxString& pass);
 };
 
 //#warning Kry TODO - move to abstract layer.
@@ -50,10 +54,12 @@ private:
 		EC_INIT,         // initial state
 		EC_CONNECT_SENT, // socket connect request sent
 		EC_REQ_SENT,     // sent auth request to core, waiting for reply
-		EC_OK,           // core replyed "ok"
-		EC_FAIL          // core replyed "bad"
+		EC_SALT_RECEIVED,// received salt from core
+		EC_PASSWD_SENT,  // sent password to core, waiting for OK
+		EC_OK,           // core replied "ok"
+		EC_FAIL          // core replied "bad"
 	} m_ec_state;
-	
+
 	// fifo of handlers for on-the-air requests. all EC concept is working in fcfs
 	// order, so it is ok to assume that order of replies is same as order of requests
 	std::list<CECPacketHandlerBase *> m_req_fifo;
@@ -378,7 +384,7 @@ public:
 
 private:
 	virtual const CECPacket *OnPacketReceived(const CECPacket *packet);
-	bool ConnectionEstablished(const CECPacket *reply);
+	bool ProcessAuthPacket(const CECPacket *reply);
 };
 
 DECLARE_LOCAL_EVENT_TYPE(wxEVT_EC_CONNECTION, wxEVT_USER_FIRST + 1000)
